# ZYX-AI

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_SHORT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/zyx_ai/: __init__.py  main.py
src/zyx_ai/api/: auth.py  portfolio.py  trading.py
src/zyx_ai/backtest/: engine.py
src/zyx_ai/core/: alerts.py  config.py  logging.py  monitoring.py  security.py
src/zyx_ai/database/: models.py  session.py
src/zyx_ai/database/migrations/: alembic.ini  env.py
src/zyx_ai/exchanges/: base.py  binance.py  bybit.py  orderbook.py
src/zyx_ai/ml/: features.py
src/zyx_ai/risk/: manager.py
src/zyx_ai/strategies/: base.py  hft.py  macd.py  rsi.py
src/zyx_ai/ws/: __init__.py  manager.py
tests/: conftest.py  test_auth.py  test_integration.py  test_strategies.py
